--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
 <body>
     <div class="container">
         <div class="headd">
-            <div>0</div>
+            <div id="res"></div>
         </div>
         <div class="buttons">
             <div class="left">
                 <button class="first clear">Clear</button>
-                <button>7</button>
-                <button>8</button>
-                <button>4</button>
-                <button>5</button>
-                <button>1</button>
-                <button>2</button>
-                <button>.</button>
-                <button>0</button>
+                <button id="7">7</button>
+                <button id="8">8</button>
+                <button id="4">4</button>
+                <button id="5">5</button>
+                <button id="1" >1</button>
+                <button id="2">2</button>
+                <button id="point">.</button>
+                <button id="0">0</button>
 
             </div>
             <div class="right">
-                <button class="first delete">Delete</button>
-                <button>9</button>
-                <button>÷</button>
+                <button class="first delete" id="delete">Delete</button>
+                <button id="9">9</button>
+                <button id="÷">÷</button>
                 <button>6</button>
-                <button>X</button>
+                <button id="x">X</button>
                 <button>3</button>
-                <button>-</button>
-                <button>+</button>
-                <button>=</button>
+                <button id="minus">-</button>
+                <button id="plus">+</button>
+                <button id="equal">=</button>
 
             </div>
 
@@ -45,6 +45,6 @@
         <div class="mainbuttons"></div>
 
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
