added new img for fun

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div class="mainbuttons"></div>
 
     </div>
+    <img src="fen.gif" alt="" class="flipped">
     <script src="script.js"></script>
 </body>
 </html>
